# hercules

./: README.md  docker-compose.yml  hercules_response.txt  main.py  pyproject.toml
hercules/: agent.py  client.py  example.py  sop.md  steering.py
hercules/cogs/: cog_app_commands.py
hercules/skills/program-creator/: SKILL.md
hercules/tools/: create_moving_avg_graph.py
