[project]
name = "hercules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents[openai]>=1.35.0",
    "strands-agents-tools[mem0_memory]>=0.4.1",
    "discord-py>=2.0.0",
    "dateparser>=1.4.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
